--- a/polleria.html
+++ b/polleria.html
@@ -39,8 +39,8 @@
                     <li><a href="#">Pollos</a></li>
                     <li><a href="#">Parrillas</a></li>
                     <li><a href="#">Promociones</a></li>
-                    <li><a href="#">Postres</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="#Postres">Postres</a></li>
+                    <li><a href="#Blog">Blog</a></li>
                 </ul>
 
                 <form class="search-form">
@@ -254,8 +254,8 @@
         </section>
 
 
-        <section class="container specials">
-            <h1 class="heading-1">Postres</h1>
+        <section id="Postres" class="container specials">
+            <h1  class="heading-1">Postres</h1>
 
             <div class="container-products">
                 <!-- Producto 1 -->
@@ -391,7 +391,7 @@
             </div>
         </section>
 
-        <section class="container blogs">
+        <section id="Blog" class="container blogs">
             <h1 class="heading-1">Últimos Blogs</h1>
 
             <div class="container-blogs">
@@ -481,8 +481,7 @@
                     <p class="title-footer">Información de Contacto</p>
                     <ul>
                         <li>
-                            Dirección: 71 Pennington Lane Vernon Rockville, CT
-                            06066
+                            Av.Aviacion 2854
                         </li>
                         <li>Teléfono: 9872-0992</li>                       
                         <li>EmaiL: Chicken Grill@gmail.com</li>
@@ -546,6 +545,10 @@
 
                 <img src="/payment.png" alt="Pagos">
             </div>
+            <div class="copyright">
+                <p style="color:aqua">CERTUS VILLA EL SALVADOR </p>
+                <p>ALESSANDRO DAVID GARCIA RENGIFO</p>
+            </div>
         </div>
     </footer>
     
@@ -555,3 +558,4 @@
     
 </body>
 </html>
+
